--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,6 @@
 extends layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+block pageTitle
+  .jumbotron
+    h1= title
+    h2 Welcome to #{title}
