--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,40 @@ doctype html
 html
   head
     title= title
+
+    // indicate that our site is mobile optimized
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    //add bootstrap dependencies from CDNjs. Using a CDN to distribute these files puts less pressure
+    //on our web server and will be delivered faster to the client than our own server.
+    script(src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js')
+    //Latest compiled and minified CSS
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
+    //Optional theme
+    //link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css")
+    //Latest compiled and minified JavaScript
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js")
   body
-    block content
+    block navBar
+        nav(class='navbar navbar-default', role='navigation')
+            .container-fluid
+                .navbar-header
+                    button(class='navbar-toggle', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                        span.sronly
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+                    a(class='navbar-brand', href='/#') My Express
+                #bs-example-navbar-collapse-1(class='collapse navbar-collapse')
+                    ul(class='nav navbar-nav')
+                        li
+                            a(href='/list/repos') Repos
+                        li
+                            a(href='/list/events') Events
+                        li
+                            a(href='/list/pulls') Pulls
+                        li
+                            a(href='/list/issues') Issues
+    block pageTitle
+
